<project>
    <parent>
        <groupId>io.teknek.deliverance</groupId>
        <artifactId>deliverance-parent</artifactId>
        <version>0.0.8-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>core</artifactId>
    <name>core</name>
    <properties>
        <build.plugins.plugin.version>3.5.3</build.plugins.plugin.version>
        <guava.version>32.0.1-jre</guava.version>
        <jafama.version>2.3.2</jafama.version>
        <jcttools.version>4.0.1</jcttools.version>
        <jemojie.version>1.7.6</jemojie.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>io.teknek.deliverance</groupId>
            <artifactId>tensor</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>io.teknek.deliverance</groupId>
            <artifactId>tensor</artifactId>
            <version>${project.version}</version>
            <classifier>tests</classifier>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.teknek.deliverance</groupId>
            <artifactId>math</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>io.teknek.deliverance</groupId>
            <artifactId>safetensors</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>io.teknek.deliverance</groupId>
            <artifactId>grace</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>io.teknek.deliverance</groupId>
            <artifactId>native</artifactId>
            <version>${project.version}</version>
            <classifier>${os.detected.name}-${os.detected.arch}</classifier>
            <optional>true</optional>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf-simple.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jctools</groupId>
            <artifactId>jctools-core</artifactId>
            <version>${jcttools.version}</version>
        </dependency>
        <dependency>
            <groupId>com.hubspot.jinjava</groupId>
            <artifactId>jinjava</artifactId>
            <version>2.8.3</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>net.jafama</groupId>
            <artifactId>jafama</artifactId>
            <version>${jafama.version}</version>
        </dependency>
        <dependency>
            <groupId>io.dropwizard.metrics</groupId>
            <artifactId>metrics-core</artifactId>
            <version>${metrics.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jdk8</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>net.fellbaum</groupId>
            <artifactId>jemoji</artifactId>
            <version>${jemojie.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>25</release>
                    <jdkToolchain>
                        <version>25</version>
                    </jdkToolchain>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>jdk.incubator.vector</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <argLine>
                        -XX:-UseCompactObjectHeaders
                        --add-opens java.base/java.nio=ALL-UNNAMED
                        --add-modules jdk.incubator.vector
                        -Djdk.attach.allowAttachSelf=true
                        --enable-native-access=ALL-UNNAMED
                        -Djava.library.path=${build.directory}/../../native/target/native-lib-only
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <forkCount>1</forkCount>
                    <argLine>
                        -XX:-UseCompactObjectHeaders
                        --add-opens java.base/java.nio=ALL-UNNAMED
                        --add-modules jdk.incubator.vector
                        -Djdk.attach.allowAttachSelf=true
                        --enable-native-access=ALL-UNNAMED
                        -Djava.library.path=${build.directory}/../../native/target/native-lib-only
                    </argLine>
                </configuration>
            </plugin>
            <!--
            <plugin>
             <groupId>net.serenity-bdd.maven.plugins</groupId>
             <artifactId>serenity-maven-plugin</artifactId>
            </plugin>
            -->
        </plugins>
    </build>
</project>  
